modified:   notebooks/transformer_scratchpad.ipynb

--- a/notebooks/transformer_scratchpad.ipynb
+++ b/notebooks/transformer_scratchpad.ipynb
@@ -31,6 +31,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Encoder\n",
+    "\n",
+    "In the first half of the notebook we'll develop all the pieces needed to implement the transformer encoder, then train and test it on some task. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We want something with output dims: (sequence_length, output_dim)"
    ]
   },
@@ -183,9 +192,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def scaled_dot_product_attention(q, k, d_k):\n",
-    "    # in order to align the dimensions for the dot product, we transpose k along the last two dimensions like this\n",
-    "    return torch.nn.Softmax(-1)(torch.matmul(q, k.transpose(-2, -1)) / math.sqrt(d_k))"
+    "def scaled_dot_product_attention(q, k, d_k, mask):\n",
+    "    scores = torch.matmul(q, k.transpose(-2, -1)) / math.sqrt(d_k)\n",
+    "    if mask is not None:\n",
+    "        scores = scores.masked_fill(mask == 0, float('-inf'))\n",
+    "    return nn.Softmax(-1)(scores)"
    ]
   },
   {
@@ -326,12 +337,12 @@
     "        self.concat_projection = nn.Linear(num_heads*d_v, d_model)\n",
     "        self.dropout = nn.Dropout(dropout)\n",
     "\n",
-    "    def forward(self, q, k, v):\n",
+    "    def forward(self, q, k, v, mask = None):\n",
     "        k_len, q_len, v_len, batch_size = k.size(1), q.size(1), v.size(1),  q.size(0)\n",
     "        residual = q\n",
     "        k, q, v = self.key_layer(k).view(batch_size, k_len,  self.num_heads, self.d_k), self.query_layer(q).view(batch_size, q_len,  self.num_heads, self.d_k), self.value_layer(v).view(batch_size, v_len,  self.num_heads, self.d_v)\n",
     "        q, k, v = q.transpose(1, 2), k.transpose(1, 2), v.transpose(1, 2)\n",
-    "        attention = scaled_dot_product_attention(q, k, self.d_k)\n",
+    "        attention = scaled_dot_product_attention(q, k, self.d_k, mask)\n",
     "        output = torch.matmul(attention, v)\n",
     "        output = self.concat_projection(output.transpose(1, 2).contiguous().view(batch_size, q_len, -1))\n",
     "        return self.dropout(self.layer_norm(output+residual))"
@@ -617,7 +628,59 @@
       "Epoch 3 / 50\n",
       "----------\n",
       "Step: 1000, average training loss over last 2000 steps: 0.3389\n",
-      "Step: 2000, average training loss over last 2000 steps: 0.3218\n"
+      "Step: 2000, average training loss over last 2000 steps: 0.3218\n",
+      "Step: 3000, average training loss over last 2000 steps: 0.3404\n",
+      "Step: 4000, average training loss over last 2000 steps: 0.3358\n",
+      "Step: 5000, average training loss over last 2000 steps: 0.3260\n",
+      "Step: 6000, average training loss over last 2000 steps: 0.3302\n",
+      "Step: 7000, average training loss over last 2000 steps: 0.3350\n",
+      "Step: 8000, average training loss over last 2000 steps: 0.3368\n",
+      "Step: 9000, average training loss over last 2000 steps: 0.3227\n",
+      "Step: 10000, average training loss over last 2000 steps: 0.3384\n",
+      "Step: 11000, average training loss over last 2000 steps: 0.3211\n",
+      "Step: 12000, average training loss over last 2000 steps: 0.3178\n",
+      "Epoch: 3, validation loss: 0.3148, val accuracy: 89.52\n",
+      "Epoch 4 / 50\n",
+      "----------\n",
+      "Step: 1000, average training loss over last 2000 steps: 0.3137\n",
+      "Step: 2000, average training loss over last 2000 steps: 0.3218\n",
+      "Step: 3000, average training loss over last 2000 steps: 0.3239\n",
+      "Step: 4000, average training loss over last 2000 steps: 0.3113\n",
+      "Step: 5000, average training loss over last 2000 steps: 0.2932\n",
+      "Step: 6000, average training loss over last 2000 steps: 0.3152\n",
+      "Step: 7000, average training loss over last 2000 steps: 0.3018\n",
+      "Step: 8000, average training loss over last 2000 steps: 0.3030\n",
+      "Step: 9000, average training loss over last 2000 steps: 0.2952\n",
+      "Step: 10000, average training loss over last 2000 steps: 0.3122\n",
+      "Step: 11000, average training loss over last 2000 steps: 0.3081\n",
+      "Step: 12000, average training loss over last 2000 steps: 0.3107\n",
+      "Epoch: 4, validation loss: 0.3278, val accuracy: 88.94\n",
+      "Epoch 5 / 50\n",
+      "----------\n",
+      "Step: 1000, average training loss over last 2000 steps: 0.3019\n",
+      "Step: 2000, average training loss over last 2000 steps: 0.2886\n",
+      "Step: 3000, average training loss over last 2000 steps: 0.3016\n",
+      "Step: 4000, average training loss over last 2000 steps: 0.2997\n",
+      "Step: 5000, average training loss over last 2000 steps: 0.3133\n",
+      "Step: 6000, average training loss over last 2000 steps: 0.2870\n",
+      "Step: 7000, average training loss over last 2000 steps: 0.3016\n",
+      "Step: 8000, average training loss over last 2000 steps: 0.2968\n",
+      "Step: 9000, average training loss over last 2000 steps: 0.2868\n",
+      "Step: 10000, average training loss over last 2000 steps: 0.2871\n",
+      "Step: 11000, average training loss over last 2000 steps: 0.3063\n",
+      "Step: 12000, average training loss over last 2000 steps: 0.2985\n",
+      "Epoch: 5, validation loss: 0.3090, val accuracy: 89.88\n",
+      "Epoch 6 / 50\n",
+      "----------\n",
+      "Step: 1000, average training loss over last 2000 steps: 0.2750\n",
+      "Step: 2000, average training loss over last 2000 steps: 0.2796\n",
+      "Step: 3000, average training loss over last 2000 steps: 0.2719\n",
+      "Step: 4000, average training loss over last 2000 steps: 0.2995\n",
+      "Step: 5000, average training loss over last 2000 steps: 0.2723\n",
+      "Step: 6000, average training loss over last 2000 steps: 0.2941\n",
+      "Step: 7000, average training loss over last 2000 steps: 0.2937\n",
+      "Step: 8000, average training loss over last 2000 steps: 0.2911\n",
+      "Step: 9000, average training loss over last 2000 steps: 0.2860\n"
      ]
     }
    ],
@@ -642,8 +705,26 @@
    "source": [
     "Thoughts so far: \n",
     "\n",
-    "This architecture is way more compute intensive but at the same time so much more batch efficient than previously explored ones (LSTMs, RNNs even when bidirectional + multi layered and so on) that we see near 90% validation accuracy after just one or two epochs. These epochs, however, take tremendously long (7 minutes per epoch v/s the 1 minute LSTMs were taking). Part of this could be becauase of the implementation being from scratch (torch.transformer might be faster), but most of this comes from the computational load the multiple blocks (and their individual complexities)"
+    "This architecture is way more compute intensive but at the same time so much more batch efficient than previously explored ones (LSTMs, RNNs even when bidirectional + multi layered and so on) that we see near 90% validation accuracy after just one or two epochs. These epochs, however, take tremendously long (7 minutes per epoch v/s the 1 minute LSTMs were taking). Part of this could be becauase of the implementation being from scratch (torch.transformer might be faster), but most of this comes from the computational load the multiple blocks (and their individual complexities)\n",
+    "\n",
+    "Now that we have the encoder and were able to build something useful off of it and ensure its functionality, we should tweak our multihead attention to enable some form of masking and then build a decoder."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Decoder\n",
+    "\n",
+    "Now, we build the decoder and train and test it for some task"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
