new file:   .gitignore 	new file:   data/README.md 	deleted:    models/.gitignore 	modified:   notebooks/decoder_only_gpt.ipynb

--- a/notebooks/decoder_only_gpt.ipynb
+++ b/notebooks/decoder_only_gpt.ipynb
@@ -6,24 +6,47 @@
    "source": [
     "# Decoder-only based GPT (language model)\n",
     "\n",
-    "Here we take a transformer block, the decoder in particular and use it for the task of language modeling. In general, this is how GPTs are trained. We will do this on a much smaller scale."
+    "Here we take a transformer block, the decoder in particular, and use it for the task of language modeling. In general, this is how GPTs are trained. We will do this on a much smaller scale."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
+    "from torch.utils.data import random_split\n",
     "import sys \n",
     "sys.path.append(\"../models\")\n",
-    "from torchtext.datasets import EnWik9"
+    "from torchtext.datasets import EnWik9\n",
+    "from torchtext.data.functional import filter_wikipedia_xml"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "439742\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(7):\n",
+    "    book_num = i+1\n",
+    "    with open('../data/harry_potter_1.txt', 'r', encoding='utf-8') as f:\n",
+    "        text = f.read()\n",
+    "    print(len(text))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +73,7 @@
        "'==Complications=='"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,24 +84,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torchtext.data.functional import filter_wikipedia_xml\n",
-    "from torchtext.datasets import EnWik9\n",
     "data_iter = EnWik9()\n",
-    "filter_data_iter =filter_wikipedia_xml(data_iter)\n"
+    "filter_data_iter = filter_wikipedia_xml(data_iter)  # convert from xml to pure text \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filter_data = list(filter_data_iter)"
+    "filtered_dataset = list(filter_data_iter)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "anarchism originated as a term of abuse first used against early working class radicals including the diggers of the english revolution and the sans culottes of the french revolution whilst the term is still used in a pejorative way to describe any act that used violent means to destroy the organization of society it has also been taken up as a positive label by self defined anarchists\n",
+      "the word anarchism is derived from the greek without archons ruler chief king anarchism as a political philosophy is the belief that rulers are unnecessary and should be abolished although there are differing interpretations of what this means anarchism also refers to related social movements that advocate the elimination of authoritarian institutions particularly the state the word anarchy as most anarchists use it does not imply chaos nihilism or anomie but rather a harmonious anti authoritarian society in place of what are regarded as authoritarian political structures and coercive economic institutions anarchists advocate social relations based upon voluntary association of autonomous individuals mutual aid and self governance\n",
+      "while anarchism is most easily defined by what it is against anarchists also offer positive visions of what they believe to be a truly free society however ideas about how an anarchist society might work vary considerably especially with respect to economics there is also disagreement about how a free society might be brought about\n",
+      "origins and predecessors\n",
+      "kropotkin and others argue that before recorded history human society was organized on anarchist principles most anthropologists follow kropotkin and engels in believing that hunter gatherer bands were egalitarian and lacked division of labour accumulated wealth or decreed law and had equal access to resources\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    print(filtered_dataset[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filtered_dataset = filtered_dataset[:int(len(filtered_dataset) * 0.1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "633671"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(filtered_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_val_size = int(len(filtered_dataset) * 0.8)  \n",
+    "test_size = len(filtered_dataset) - train_val_size\n",
+    "train_val_data, test_data = random_split(filtered_dataset, [train_val_size, test_size])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_size = int(len(train_val_data) * 0.8)  \n",
+    "val_size = len(train_val_data) - train_size\n",
+    "train_data, test_data = random_split(train_val_data, [train_size, val_size])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train set size: 405548, test: 126735, val: 101388\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"train set size: {train_size}, test: {test_size}, val: {val_size}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
