modified:   notebooks/decoder_only_gpt.ipynb

--- a/notebooks/decoder_only_gpt.ipynb
+++ b/notebooks/decoder_only_gpt.ipynb
@@ -6,12 +6,14 @@
    "source": [
     "# Decoder-only based GPT (language model)\n",
     "\n",
-    "Here we take a transformer block, the decoder in particular, and use it for the task of language modeling. In general, this is how GPTs are trained. We will do this on a much smaller scale."
+    "Here we take a transformer block, the decoder in particular, and use it for the task of language modeling. In general, this is how GPTs are trained. We will do this on a much smaller scale.\n",
+    "\n",
+    "We take everything we've already built and leverage it in the way Karpathy implements a character level LM here: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,171 +21,151 @@
     "from torch.utils.data import random_split\n",
     "import sys \n",
     "sys.path.append(\"../models\")\n",
-    "from torchtext.datasets import EnWik9\n",
-    "from torchtext.data.functional import filter_wikipedia_xml"
+    "import tiktoken"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "439742\n"
+      "2652650\n"
      ]
     }
    ],
    "source": [
-    "for i in range(7):\n",
+    "harry_potter_text = \" \"\n",
+    "for i in range(4):\n",
     "    book_num = i+1\n",
-    "    with open('../data/harry_potter_1.txt', 'r', encoding='utf-8') as f:\n",
-    "        text = f.read()\n",
-    "    print(len(text))"
+    "    with open(f'../data/hp{book_num}.txt', 'r', encoding='utf-8') as f:\n",
+    "        harry_potter_text += f.read()\n",
+    "print(len(harry_potter_text))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tokenization\n",
+    "Instead of character level, we're going to model this LM using a tokenizer. in particular, we're going to try to use OpenAI's tiktoken with the gpt2 50k tokenizer. This might end up being too large of a vocab size given compute constraints, but"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_iter = EnWik9()"
+    "enc = tiktoken.get_encoding(\"gpt2\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = list(dataset_iter)"
+    "encoder = enc.encode\n",
+    "decoder = enc.decode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "token_example = encoder(\"hello world test tiktokenizer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'==Complications=='"
+       "'izer'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset[-4]"
+    "decoded = decoder([token_example[-1]])\n",
+    "decoded"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_iter = EnWik9()\n",
-    "filter_data_iter = filter_wikipedia_xml(data_iter)  # convert from xml to pure text \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "filtered_dataset = list(filter_data_iter)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "anarchism originated as a term of abuse first used against early working class radicals including the diggers of the english revolution and the sans culottes of the french revolution whilst the term is still used in a pejorative way to describe any act that used violent means to destroy the organization of society it has also been taken up as a positive label by self defined anarchists\n",
-      "the word anarchism is derived from the greek without archons ruler chief king anarchism as a political philosophy is the belief that rulers are unnecessary and should be abolished although there are differing interpretations of what this means anarchism also refers to related social movements that advocate the elimination of authoritarian institutions particularly the state the word anarchy as most anarchists use it does not imply chaos nihilism or anomie but rather a harmonious anti authoritarian society in place of what are regarded as authoritarian political structures and coercive economic institutions anarchists advocate social relations based upon voluntary association of autonomous individuals mutual aid and self governance\n",
-      "while anarchism is most easily defined by what it is against anarchists also offer positive visions of what they believe to be a truly free society however ideas about how an anarchist society might work vary considerably especially with respect to economics there is also disagreement about how a free society might be brought about\n",
-      "origins and predecessors\n",
-      "kropotkin and others argue that before recorded history human society was organized on anarchist principles most anthropologists follow kropotkin and engels in believing that hunter gatherer bands were egalitarian and lacked division of labour accumulated wealth or decreed law and had equal access to resources\n"
+      "torch.Size([683899]) torch.int64\n"
      ]
     }
    ],
    "source": [
-    "for i in range(5):\n",
-    "    print(filtered_dataset[i])"
+    "dataset = torch.tensor(encoder(harry_potter_text), dtype=torch.long)\n",
+    "print(dataset.shape, dataset.dtype)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filtered_dataset = filtered_dataset[:int(len(filtered_dataset) * 0.1)]"
+    "train_val_size = int(len(dataset) * 0.9)  \n",
+    "test_size = len(dataset) - train_val_size\n",
+    "train_val_data, test_data = random_split(dataset, [train_val_size, test_size])\n",
+    "\n",
+    "train_size = int(len(train_val_data) * 0.9)  \n",
+    "val_size = len(train_val_data) - train_size\n",
+    "train_data, val_data = random_split(train_val_data, [train_size, val_size])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "633671"
+       "50257"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(filtered_dataset)"
+    "enc.n_vocab"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_val_size = int(len(filtered_dataset) * 0.8)  \n",
-    "test_size = len(filtered_dataset) - train_val_size\n",
-    "train_val_data, test_data = random_split(filtered_dataset, [train_val_size, test_size])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_size = int(len(train_val_data) * 0.8)  \n",
-    "val_size = len(train_val_data) - train_size\n",
-    "train_data, test_data = random_split(train_val_data, [train_size, val_size])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train set size: 405548, test: 126735, val: 101388\n"
+      "train set size: 553958, test: 68390, val: 61551\n"
      ]
     }
    ],
@@ -193,10 +175,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([8, 8]) torch.Size([8, 8])\n",
+      "when input is [2034, 287] the target: 470\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(10000)\n",
+    "batch_size = 8 # how many independent sequences will we process in parallel?\n",
+    "block_size = 8 # what is the maximum context length for predictions?\n",
+    "\n",
+    "def get_batch(data):\n",
+    "    ix = torch.randint(len(data) - block_size, (batch_size,))\n",
+    "    x = torch.stack([data[i:i+block_size] for i in ix])\n",
+    "    y = torch.stack([data[i+1:i+block_size+1] for i in ix])  # for any sequence x, the target y will be the next 8 tokens\n",
+    "    return x, y\n",
+    "\n",
+    "xb, yb = get_batch(train_data)\n",
+    "\n",
+    "print(xb.shape, yb.shape)\n",
+    "\n",
+    "context = xb[0, :2]\n",
+    "target = yb[0,1]\n",
+    "print(f\"when input is {context.tolist()} the target: {target}\")"
+   ]
   }
  ],
  "metadata": {
