--- a/notebooks/decoder_only_gpt.ipynb
+++ b/notebooks/decoder_only_gpt.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,12 +21,13 @@
     "from torch.utils.data import random_split\n",
     "import sys \n",
     "sys.path.append(\"../models\")\n",
-    "import tiktoken"
+    "import tiktoken\n",
+    "from torch.utils.data import Dataset, DataLoader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +94,7 @@
        "'izer'"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +148,7 @@
        "50257"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +184,7 @@
      "output_type": "stream",
      "text": [
       "torch.Size([8, 8]) torch.Size([8, 8])\n",
-      "when input is [2034, 287] the target: 470\n"
+      "when input is [278, 198] the target: 2814\n"
      ]
     }
    ],
@@ -206,6 +207,62 @@
     "target = yb[0,1]\n",
     "print(f\"when input is {context.tolist()} the target: {target}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class HPDataset(Dataset):\n",
+    "    def __init__(self, data, block_size):\n",
+    "        self.data = data\n",
+    "        self.block_size = block_size\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        # Return the total number of possible sequences\n",
+    "        return len(self.data) - self.block_size\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        # Fetch a single sequence x and its corresponding target y\n",
+    "        x = self.data[idx:idx + self.block_size]\n",
+    "        y = self.data[idx + 1:idx + self.block_size + 1]\n",
+    "        return x, y\n",
+    "\n",
+    "block_size = 8\n",
+    "train_dataset, val_dataset, test_dataset = HPDataset(train_data, block_size), HPDataset(val_data, block_size), HPDataset(test_data, block_size)\n",
+    "\n",
+    "batch_size = 32 \n",
+    "train_loader, val_loader, test_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True), DataLoader(val_dataset, batch_size=batch_size, shuffle=True), DataLoader(test_dataset, batch_size=batch_size, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17311\n",
+      "2137\n",
+      "1924\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(train_loader))\n",
+    "print(len(test_loader))\n",
+    "print(len(val_loader))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
