minor fixes for clarity

--- a/notebooks/decoder_only_gpt.ipynb
+++ b/notebooks/decoder_only_gpt.ipynb
@@ -18,9 +18,11 @@
    "outputs": [],
    "source": [
     "import torch\n",
+    "from torch import nn\n",
     "from torch.utils.data import random_split\n",
     "import sys \n",
     "sys.path.append(\"../models\")\n",
+    "from transformer_blocks import Transformer\n",
     "import tiktoken\n",
     "from torch.utils.data import Dataset, DataLoader"
    ]
@@ -262,7 +264,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class harryGPT(nn.Module):\n",
+    "    def __init__(self, *args, **kwargs) -> None:\n",
+    "        super().__init__(*args, **kwargs)\n",
+    "    \n",
+    "    def forward(self, d_k, d_model, d_v, d_ff, num_heads, num_layers, num_classes, vocab_size, dropout=0.1):\n",
+    "        self.decoder_transformer = Transformer(d_k, d_model, d_v, d_ff, num_heads, num_layers, num_classes, vocab_size, dropout)"
+   ]
   }
  ],
  "metadata": {
