switched to tokenmonster for flexibility with smaller vocabulary sizes

--- a/notebooks/decoder_only_gpt.ipynb
+++ b/notebooks/decoder_only_gpt.ipynb
@@ -13,23 +13,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "from torch import nn\n",
+    "import numpy as np\n",
     "from torch.utils.data import random_split\n",
     "import sys \n",
     "sys.path.append(\"../models\")\n",
     "from transformer_blocks import Transformer\n",
-    "import tiktoken\n",
-    "from torch.utils.data import Dataset, DataLoader"
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "import tokenmonster"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -59,74 +60,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "enc = tiktoken.get_encoding(\"gpt2\")"
+    "vocab = tokenmonster.load(\"englishcode-8000-consistent-v1\")\n",
+    "tokens = vocab.tokenize(\"This is a test.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "encoder = enc.encode\n",
-    "decoder = enc.decode"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "token_example = encoder(\"hello world test tiktokenizer\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'izer'"
+       "array([ 401, 6799, 2856,   17], dtype=uint16)"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "decoded = decoder([token_example[-1]])\n",
-    "decoded"
+    "tokens"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "token_example = vocab.tokenize(\"hello world test monster tokenizer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  37, 3346, 3752, 2856, 1768, 2239, 3681, 1231,   62], dtype=uint16)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "token_example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['', ' hello', ' world', ' test', ' mon', 'ster', ' token', 'ize', 'r']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[vocab.decode([token]) for token in token_example]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokens = np.array(vocab.tokenize(harry_potter_text), dtype=np.float16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([683899]) torch.int64\n"
+      "torch.Size([740637]) torch.int64\n"
      ]
     }
    ],
    "source": [
-    "dataset = torch.tensor(encoder(harry_potter_text), dtype=torch.long)\n",
+    "dataset = torch.tensor(tokens, dtype=torch.long)\n",
     "print(dataset.shape, dataset.dtype)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,34 +181,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "50257"
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "enc.n_vocab"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train set size: 553958, test: 68390, val: 61551\n"
+      "train set size: 599915, test: 74064, val: 66658\n"
      ]
     }
    ],
@@ -178,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +206,7 @@
      "output_type": "stream",
      "text": [
       "torch.Size([8, 8]) torch.Size([8, 8])\n",
-      "when input is [278, 198] the target: 2814\n"
+      "when input is [7040, 662] the target: 3\n"
      ]
     }
    ],
@@ -212,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,16 +260,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "17311\n",
-      "2137\n",
-      "1924\n"
+      "18748\n",
+      "2315\n",
+      "2083\n"
      ]
     }
    ],
@@ -261,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +290,8 @@
     "        super().__init__(*args, **kwargs)\n",
     "    \n",
     "    def forward(self, d_k, d_model, d_v, d_ff, num_heads, num_layers, num_classes, vocab_size, dropout=0.1):\n",
-    "        self.decoder_transformer = Transformer(d_k, d_model, d_v, d_ff, num_heads, num_layers, num_classes, vocab_size, dropout)"
+    "        self.decoder_transformer = Transformer(d_k, d_model, d_v, d_ff, num_heads, num_layers, num_classes, vocab_size, dropout, mask=True)\n",
+    "        "
    ]
   }
  ],
