modified:   notebooks/decoder_only_gpt.ipynb	modified:   notebooks/encoder_only_classification.ipynb

--- a/notebooks/decoder_only_gpt.ipynb
+++ b/notebooks/decoder_only_gpt.ipynb
@@ -281,17 +281,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class harryGPT(nn.Module):\n",
-    "    def __init__(self, *args, **kwargs) -> None:\n",
-    "        super().__init__(*args, **kwargs)\n",
-    "    \n",
-    "    def forward(self, d_k, d_model, d_v, d_ff, num_heads, num_layers, num_classes, vocab_size, dropout=0.1):\n",
+    "class zeptoGPT(nn.Module):\n",
+    "    \"\"\"\n",
+    "    zepto because it's a really small GPT\n",
+    "    \"\"\"\n",
+    "    def __init__(self, d_k, d_model, d_v, d_ff, num_heads, num_layers, num_classes, vocab_size, dropout=0.1) -> None:\n",
+    "        super().__init__()\n",
     "        self.decoder_transformer = Transformer(d_k, d_model, d_v, d_ff, num_heads, num_layers, num_classes, vocab_size, dropout, mask=True)\n",
-    "        "
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        self.fc = nn.Linear(d_model, vocab_size)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        out = self.decoder_transformer(x)\n",
+    "        out = self.dropout(self.fc(out))\n",
+    "        return nn.functional.softmax(out)"
    ]
   }
  ],
